# slug_kernel

./: CMakeLists.txt  toolchain.cmake
libc/: CMakeLists.txt
libc/include/: math.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h
libc/src/math/: log.cpp
libc/src/stdio/: printf.cpp
libc/src/stdlib/: memory.cpp
libc/src/string/: array_manipulation.cpp  examination.cpp
slug_kernel/: CMakeLists.txt
slug_kernel/include/arch/x86_64/: gdt.h  gdt_manager.h  idt.h
slug_kernel/include/drivers/interrupts/: pic.h
slug_kernel/include/drivers/memory/: memory.h  physical_memory.h
slug_kernel/include/drivers/serial/: serial.h
slug_kernel/src/arch/x86_64/: gdt.cpp  gdt_manager.cpp  idt.cpp
slug_kernel/src/drivers/interrupts/: pic.cpp
slug_kernel/src/drivers/memory/: memory.cpp  physical_memory.cpp
slug_kernel/src/drivers/serial/: serial.cpp
